<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="0dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BasicMain" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:orientation="vertical"
        android:rowCount="2" >

        <GridLayout
            android:id="@+id/gridLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="5"
            tools:ignore="NewApi">

            <TextView
                android:id="@+id/textView0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/timestamp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/zero"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_row="2"
                android:text="@string/accel_x"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/zero"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/accel_y"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/zero"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_row="8"
                android:text="@string/accel_z"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/zero"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_row="11"
                android:text="@string/gyro_x"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/zero"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/gyro_y"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/zero"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_row="17"
                android:text="@string/gyro_z"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/zero"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_row="20"
                android:text="@string/mag_x"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/zero"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/mag_y"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/zero"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/mag_z"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:layout_gravity="left|top"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/zero"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/light_intensity"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/zero"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/steps"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/zero"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/azimuth"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:layout_gravity="left|top"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/zero"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="left|top"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/orientation"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/zero"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/wifi"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/zero"
                android:textSize="12sp" />

        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:rowCount="1"
            android:weightSum="1" >

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="stopExercise2"
                android:text="Stop the Data" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>